--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,31 +1,29 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-solid fa-hospital"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="/listing">All Hospital</a> 
-        </div>
-        <div class="navbar-nav ms-auto">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search Hospital" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">
-           Search</button>
-          </form>
-        </div>
-        
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="/new">Add New Hospital</a>
-          <% if(!currUser){%>
-          <a class="nav-link"href="/signup"><b>Sign Up</b></a>
-          <a class="nav-link" href="/login"><b>Login</b></a>
-          <% } %>
-          <% if(currUser) {%>
-          <a class="nav-link" href="/logout">LogOut</a>
-          <% } %>
-        </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/"><i class="fa-solid fa-hospital"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav bg-white">
+        <a class="nav-link" href="/listing">All Hospital</a> 
+      </div>
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex">
+          <input class="form-control me-2" name="search" type="search" placeholder="Search Hospital" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link bg-white" href="/new">Add New Hospital</a>
+        <% if(!currUser){ %>
+        <a class="nav-link bg-white" href="/signup"><b>Sign Up</b></a>
+        <a class="nav-link bg-white" href="/login"><b>Login</b></a>
+        <% } %>
+        <% if(currUser) { %>
+        <a class="nav-link bg-white" href="/logout">LogOut</a>
+        <% } %>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
